--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
         "@testing-library/jest-dom": "^5.11.5",
         "@testing-library/react": "^11.1.2",
         "@testing-library/user-event": "^12.2.2",
+        "axios": "^0.21.0",
         "bootstrap": "^4.5.3",
         "node-sass": "^4.14.1",
         "react": "^17.0.1",
@@ -15,8 +16,9 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.0",
         "react-slick": "^0.27.13",
-        "react-thunk": "^1.0.0",
         "react-transition-group": "^4.4.1",
+        "redux": "^4.0.5",
+        "redux-thunk": "^2.3.0",
         "slick-carousel": "^1.8.1",
         "web-vitals": "^0.2.4"
     },
