--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-validator": "^6.7.0",
-        "mongoose": "^5.10.16"
+        "mongoose": "^5.10.16",
+        "multer": "^1.4.2",
+        "sharp": "^0.26.3"
     },
     "devDependencies": {
         "nodemon": "^2.0.6"
