--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
         "@testing-library/user-event": "^12.2.2",
         "axios": "^0.21.0",
         "bootstrap": "^4.5.3",
+        "jwt-decode": "^3.1.2",
         "node-sass": "^4.14.1",
         "prop-type": "0.0.1",
         "react": "^17.0.1",
