--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.0",
         "react-slick": "^0.27.13",
+        "react-spinners": "^0.9.0",
         "react-transition-group": "^4.4.1",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
