--- a/server/config/dev.env
+++ b/server/config/dev.env
@@ -2,3 +2,4 @@ MONGODB_URI=mongodb://127.0.0.1:27017/e-commerce-app
 PORT=5000
 SERVER_API_URL=http://localhost:5000
 JWT_SECRET_BAG='goaheadluckyboy'
+JWT_SECRET_AUTH='goaheadluckygirl'
